# tor-selenium-x

./: .coverage  .env.example  .gitignore  Makefile  README.md  pyproject.toml  railway.toml
.cursor/rules/: general.mdc  project-setup.mdc  python.mdc
docker/: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
docker/development/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
docker/production/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
scripts/: setup.sh
src/: __init__.py  constants.py  hello.py  main.py  models.py  tor_scraper.py  utils.py  x_scraper.py
src/utils/: __init__.py  anti_detection.py  cookies.py  data_storage.py  decorators.py  human_simulation.py  logger.py  selectors.py  selenium_helpers.py  text_processing.py  tor_helpers.py  x_helpers.py
tests/: __init__.py  test_docker_file_permissions.py  test_hello.py  test_tor_scraper.py  test_utils.py  test_x_scraper.py
